Made it possible to override jQuery UI sortable options via settings in the renderer plugin.
Moved Panels stylizer to CTools. You must update CTools at the same time as Panels.
#737602: Generic NOT checkbox for all access tests.
#369628: Sort results by export key when bulk exporting.
#690902: Improvement to export.module integration of panel nodes.
#690814: Panels mini edit form could overwrite page title.

Panels 6.x-3.5 (2010-May-28)
==============
Replaced panels_load_include() with ctools_include().
Restored (and deprecated) panels_print_layout(), as other modules were relying on it.

Panels 6.x-3.4 (2010-May-19)
==============
Introduced Panels Stylizer.
Removed superfluous function, panels_sanitize_display().
#655268: Fix a problem retrieving cached content created by #634746.
Removed the old and crufty panels_print_layout().
#745808 by Robbert: use number_format() in flexible width calculations to ensure locale settings cannot bork generated CSS.
Stopped wasting cycles trying to render a mini panel in a block when we know the mini panel doesn't exist.
#765978 by joshk: Added watchdoggery and a hook to panels_display_save().
#746568 by mgriego: Disable block caching for mini panels.
#798954 by dixon: Pass $form_state to style plugins' validate and submit callbacks.
#779012 by c960657: implement the callback for a single content_type subtype in panels_mini to improve performance with  large numbers of mini panels.
#763584 by neclimdul: Add a link to the block configuration page for mini-panels that takes the user to edit that mini- panel.
Security updates: protect the importer with the 'use PHP for block visibility' permission.

Panels 6.x-3.3 (2010-Feb-01)
==============

#612850: Fix crash bug with panes referencing deleted/missing views.
#614178: Transition to panels-pane.tpl.php caused empty panes to display again.
#634746 by joshk: Allow pane caching to modify the content during cache storage.